<resources>
    <string name="app_name">Lecture17ExerAnil</string>
    <string name="guesses">You have 7 guesses left</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcomeTo">Welcome to</string>
    <string name="wordGuess">Word Guess</string>
    <string name="start">Start</string>
    <string name="StartOver">Start Over</string>
    <string name="currGuess"></string>
    <string name="about">About</string>
    <string name="main">Main Menu</string>
    <string name="currGuessHint">Current Guess</string>
    <string name="desc1">This is a game similar to scrabble. The goal of the game is to use the letters in the word bank to create the goal words hidden by the underscores.</string>
    <string name="desc2">Although a word may be a valid English word, that does not necessarily mean that it is one of the words in the level.</string>
    <string name="desc3">There are 3 levels, can you beat them all?</string>
    <string name="created">Made by Anil Rao and Cam Benassi.</string>
    <string name="guess">Guess</string>

    <string name="level1">Level 1</string>
    <string name="wordPlaceholderLvl1">_ _ _</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="ACE">ACE</string>
    <string name="CAB">CAB</string>
    <string name="BAD">BAD</string>

    <string name="level2">Level 2</string>
    <string name="wordPlaceholderLvl2">_ _ _ _</string>
    <string name="l">L</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="m">M</string>
    <string name="MEAL">MEAL</string>
    <string name="TEAM">TEAM</string>
    <string name="SALE">SALE</string>
    <string name="LATE">LATE</string>

    <string name="level3">Level 3</string>
    <string name="wordPlaceholderLvl3">_ _ _ _ _</string>
    <string name="o">O</string>
    <string name="i">I</string>
    <string name="n">N</string>
    <string name="h">H</string>
    <string name="u">U</string>
    <string name="r">R</string>
    <string name="UNION">UNION</string>
    <string name="SHINE">SHINE</string>
    <string name="HONOR">HONOR</string>
    <string name="TONES">TONES</string>
    <string name="OATHS">OATHS</string>


</resources>