<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".level1">

    <TextView
        android:id="@+id/level2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/level2"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/word1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/wordPlaceholderLvl2"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level2" />

    <TextView
        android:id="@+id/word2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/wordPlaceholderLvl2"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word1" />

    <TextView
        android:id="@+id/word3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/wordPlaceholderLvl2"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word2" />

    <TextView
        android:id="@+id/word4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/wordPlaceholderLvl2"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word3" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word4">

        <Button
            android:id="@+id/a"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/a" />

        <Button
            android:id="@+id/e"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/e" />

        <Button
            android:id="@+id/i"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/l" />

        <Button
            android:id="@+id/o"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/m" />

        <Button
            android:id="@+id/n"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/t" />

        <Button
            android:id="@+id/s"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/s" />
    </LinearLayout>

    <Button
        android:id="@+id/guessBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currGuess" />

    <TextView
        android:id="@+id/currGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/currGuessHint"
        android:text="@string/currGuess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>