<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".level1">

    <TextView
        android:id="@+id/level1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/level1"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/word1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="30dp"
        android:text="@string/wordPlaceholderLvl1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level1" />

    <TextView
        android:id="@+id/word2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="30dp"
        android:text="@string/wordPlaceholderLvl1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word1" />

    <TextView
        android:id="@+id/word3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="30dp"
        android:text="@string/wordPlaceholderLvl1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word2" />

    <Button
        android:id="@+id/a"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/i" />

    <Button
        android:id="@+id/e"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/b"
        app:layout_constraintEnd_toStartOf="@+id/i"
        app:layout_constraintStart_toEndOf="@+id/a"
        app:layout_constraintTop_toTopOf="@+id/i" />

    <Button
        android:id="@+id/i"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word3" />

    <Button
        android:id="@+id/o"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/d"
        app:layout_constraintEnd_toStartOf="@+id/n"
        app:layout_constraintStart_toEndOf="@+id/i"
        app:layout_constraintTop_toTopOf="@+id/i" />

    <Button
        android:id="@+id/n"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/e"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/i" />

    <Button
        android:id="@+id/guessBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currGuess" />

    <TextView
        android:id="@+id/currGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/currGuessHint"
        android:text="@string/currGuess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/i" />
</androidx.constraintlayout.widget.ConstraintLayout>